// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VolumeSize renders correctly with all props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #151a2d;
}

.emotion-6 {
  fill: #45d6b5;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-6.emotion-6 {
  margin-right: 8px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

.emotion-8 {
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

.emotion-9 {
  background-color: #45d6b5;
  border-radius: 3px 0 0 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 68%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

.emotion-10 {
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 10%;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

.emotion-12 {
  text-align: left;
}

<<<<<<< HEAD
.emotion-14 {
=======
.emotion-13 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<<<<<<< HEAD
.emotion-15 {
=======
.emotion-14 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  right: 10%;
}

<<<<<<< HEAD
.emotion-16 {
=======
.emotion-15 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  right: 0;
}

<<<<<<< HEAD
.emotion-17 {
=======
.emotion-16 {
>>>>>>> feat: migrate colors from theme in icon
  text-align: right;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        >
          Test
        </span>
        <span
          class="emotion-5"
        >
          15 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
        class="sc-ui-icon emotion-6"
=======
        class="sc-ui-icon emotion-5 emotion-6"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-8"
      >
        <span
          class="emotion-9"
        />
      </div>
      <div
        class="emotion-10"
      >
        <div
          class="emotion-11"
        >
          <div
            class="emotion-12"
          >
            0 GB
          </div>
          <p
<<<<<<< HEAD
            class="emotion-2 emotion-14"
=======
            class="emotion-13"
>>>>>>> feat: migrate colors from theme in icon
          >
            min
          </p>
        </div>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-15"
      >
        <div
          class="emotion-16"
        >
          <div
            class="emotion-17"
=======
        class="emotion-14"
      >
        <div
          class="emotion-15"
        >
          <div
            class="emotion-16"
>>>>>>> feat: migrate colors from theme in icon
          >
            20 GB
          </div>
          <p
<<<<<<< HEAD
            class="emotion-2 emotion-14"
=======
            class="emotion-13"
>>>>>>> feat: migrate colors from theme in icon
          >
            max
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize renders correctly with minimal props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #ff8c69;
}

.emotion-6 {
  fill: #ff8c69;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-6.emotion-6 {
  margin-right: 8px;
}

<<<<<<< HEAD
.emotion-8 {
=======
.emotion-7 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

<<<<<<< HEAD
.emotion-8.emotion-8 {
  color: #ff8c69;
}

.emotion-9 {
=======
.emotion-8 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-9 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #ff8c69;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 250%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<<<<<<< HEAD
.emotion-13 {
=======
.emotion-12 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
.emotion-14 {
  text-align: left;
}

.emotion-16 {
=======
.emotion-13 {
  text-align: left;
}

.emotion-14 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        />
        <span
          class="emotion-5"
        >
          5 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
        class="sc-ui-icon emotion-6"
=======
        class="sc-ui-icon emotion-5 emotion-6"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
<<<<<<< HEAD
        class="emotion-2 emotion-8"
=======
        class="emotion-7"
>>>>>>> feat: migrate colors from theme in icon
      >
        Volume capacity exceeded
      </p>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-9"
    >
      <div
        class="emotion-10"
      >
        <span
          class="emotion-11"
        />
      </div>
      <div
        class="emotion-12"
      >
        <div
          class="emotion-13"
        >
          <div
            class="emotion-14"
=======
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <span
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-11"
      >
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
>>>>>>> feat: migrate colors from theme in icon
          >
            0 GB
          </div>
          <p
<<<<<<< HEAD
            class="emotion-2 emotion-16"
=======
            class="emotion-14"
>>>>>>> feat: migrate colors from theme in icon
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize renders correctly without maxSize 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #ff8c69;
}

.emotion-6 {
  fill: #ff8c69;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-6.emotion-6 {
  margin-right: 8px;
}

<<<<<<< HEAD
.emotion-8 {
=======
.emotion-7 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

<<<<<<< HEAD
.emotion-8.emotion-8 {
  color: #ff8c69;
}

.emotion-9 {
=======
.emotion-8 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-9 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #ff8c69;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 750%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<<<<<<< HEAD
.emotion-13 {
=======
.emotion-12 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
.emotion-14 {
  text-align: left;
}

.emotion-16 {
=======
.emotion-13 {
  text-align: left;
}

.emotion-14 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        >
          Test
        </span>
        <span
          class="emotion-5"
        >
          15 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
        class="sc-ui-icon emotion-6"
=======
        class="sc-ui-icon emotion-5 emotion-6"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
<<<<<<< HEAD
        class="emotion-2 emotion-8"
=======
        class="emotion-7"
>>>>>>> feat: migrate colors from theme in icon
      >
        Test too big
      </p>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-9"
    >
      <div
        class="emotion-10"
      >
        <span
          class="emotion-11"
        />
      </div>
      <div
        class="emotion-12"
      >
        <div
          class="emotion-13"
        >
          <div
            class="emotion-14"
=======
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <span
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-11"
      >
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
>>>>>>> feat: migrate colors from theme in icon
          >
            0 GB
          </div>
          <p
<<<<<<< HEAD
            class="emotion-2 emotion-16"
=======
            class="emotion-14"
>>>>>>> feat: migrate colors from theme in icon
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize should display too big error 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #ff8c69;
}

.emotion-6 {
  fill: #ff8c69;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-6.emotion-6 {
  margin-right: 8px;
}

<<<<<<< HEAD
.emotion-8 {
=======
.emotion-7 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

<<<<<<< HEAD
.emotion-8.emotion-8 {
  color: #ff8c69;
}

.emotion-9 {
=======
.emotion-8 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-9 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #ff8c69;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 140%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 10%;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

<<<<<<< HEAD
.emotion-13 {
=======
.emotion-12 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
.emotion-14 {
  text-align: left;
}

.emotion-16 {
=======
.emotion-13 {
  text-align: left;
}

.emotion-14 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<<<<<<< HEAD
.emotion-17 {
=======
.emotion-15 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  right: 10%;
}

<<<<<<< HEAD
.emotion-18 {
=======
.emotion-16 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  right: 0;
}

<<<<<<< HEAD
.emotion-19 {
=======
.emotion-17 {
>>>>>>> feat: migrate colors from theme in icon
  text-align: right;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        >
          Test
        </span>
        <span
          class="emotion-5"
        >
          25 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
        class="sc-ui-icon emotion-6"
=======
        class="sc-ui-icon emotion-5 emotion-6"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
<<<<<<< HEAD
        class="emotion-2 emotion-8"
=======
        class="emotion-7"
>>>>>>> feat: migrate colors from theme in icon
      >
        Test too big
      </p>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-9"
    >
      <div
        class="emotion-10"
      >
        <span
          class="emotion-11"
        />
      </div>
      <div
        class="emotion-12"
      >
        <div
          class="emotion-13"
        >
          <div
            class="emotion-14"
=======
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <span
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-11"
      >
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
>>>>>>> feat: migrate colors from theme in icon
          >
            0 GB
          </div>
          <p
<<<<<<< HEAD
            class="emotion-2 emotion-16"
=======
            class="emotion-14"
>>>>>>> feat: migrate colors from theme in icon
          >
            minimum
          </p>
        </div>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-17"
      >
        <div
          class="emotion-18"
        >
          <div
            class="emotion-19"
=======
        class="emotion-15"
      >
        <div
          class="emotion-16"
        >
          <div
            class="emotion-17"
>>>>>>> feat: migrate colors from theme in icon
          >
            20 GB
          </div>
          <p
<<<<<<< HEAD
            class="emotion-2 emotion-16"
=======
            class="emotion-14"
>>>>>>> feat: migrate colors from theme in icon
          >
            maximum
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize should display too small error 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #ff8c69;
}

.emotion-6 {
  fill: #ff8c69;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-6.emotion-6 {
  margin-right: 8px;
}

<<<<<<< HEAD
.emotion-8 {
=======
.emotion-7 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

<<<<<<< HEAD
.emotion-8.emotion-8 {
  color: #ff8c69;
}

.emotion-9 {
=======
.emotion-8 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-9 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #ff8c69;
  border-radius: 3px 0 0 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 37%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> feat: migrate colors from theme in icon
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<<<<<<< HEAD
.emotion-13 {
=======
.emotion-12 {
>>>>>>> feat: migrate colors from theme in icon
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
.emotion-14 {
  text-align: left;
}

.emotion-16 {
=======
.emotion-13 {
  text-align: left;
}

.emotion-14 {
>>>>>>> feat: migrate colors from theme in icon
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        >
          Test
        </span>
        <span
          class="emotion-5"
        >
          15 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
        class="sc-ui-icon emotion-6"
=======
        class="sc-ui-icon emotion-5 emotion-6"
>>>>>>> feat: migrate colors from theme in icon
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
<<<<<<< HEAD
        class="emotion-2 emotion-8"
=======
        class="emotion-7"
>>>>>>> feat: migrate colors from theme in icon
      >
        Test too small
      </p>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-9"
    >
      <div
        class="emotion-10"
      >
        <span
          class="emotion-11"
        />
      </div>
      <div
        class="emotion-12"
      >
        <div
          class="emotion-13"
        >
          <div
            class="emotion-14"
=======
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <span
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-11"
      >
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
>>>>>>> feat: migrate colors from theme in icon
          >
            20 GB
          </div>
          <p
<<<<<<< HEAD
            class="emotion-2 emotion-16"
=======
            class="emotion-14"
>>>>>>> feat: migrate colors from theme in icon
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
